syntax = 'proto3';

package redisCache;

message Request {
     string Method = 1;
     map<string, string> URL = 2;
     map<string, string> Header = 3;
     string Host = 4;
     map<string, string> Form = 5;
     map<string, string> PostForm = 6;
}

message Response {
    string Status = 7;
    int32 StatusCode = 8;
}

message UniqueRequest {
    Request Req = 10;
    Response Resp = 11;
    string Trigger = 12;
}

// We need this because we don't store the ReqUID in the above Message (UniqueRequest)
// and we don't store the UID there because the key in Redis is the ReqUID -- including it in the value would be
// unnecessary duplication
message RecordedEntry {
    string ReqUID = 13;
    Request Req = 14;
    Response Resp = 15;
    string Trigger = 16;
}

